# skunk

./: .gitignore  CMakeLists.txt  main.cpp
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
skunk/neighbors/: knn.h
skunk/neural_network/: neuralnet.h
skunk/svm/: svm.h
